--- a/src/Styles/Body.css
+++ b/src/Styles/Body.css
@@ -1,9 +1,10 @@
 .upperBody {
     width: 100%;
-    
+    max-height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     color: #FFFFFF;
 }
 
@@ -20,8 +21,8 @@
     font-family: Poppins;
     font-style: normal;
     font-weight: 400;
-    font-size: 1em;
-    line-height: 1.5em;
+    font-size: 2.5vh;
+    line-height: 1.7em;
     display: flex;
     align-items: center;
 }
@@ -30,7 +31,7 @@
 
     font-family: Poppins;
     font-weight: 600;
-    font-size: 2em;
+    font-size: 5vh;
     line-height: 1.5em;
     
 }
