--- a/src/Styles/LowerBody.css
+++ b/src/Styles/LowerBody.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 1593px) {
+@media screen and (max-width: 1400px) {
   body {
     overflow-x: hidden;
   }
@@ -45,8 +45,8 @@
     align-items: center;
   }
   .bite__component {
-    margin-top: 100px;
-    margin-bottom: -40px;
+    margin-top: 6.25rem;
+    margin-bottom: -2.5rem;
     min-width: 100vw;
     min-height: 35rem;
     background: #f5f5f5;
@@ -57,7 +57,7 @@
     min-height: 35rem;
     background: #f5f5f5;
     justify-content: center;
-    margin-top: 100px;
+    margin-top: 6.25rem;
   }
 }
 .footer__body {
@@ -68,15 +68,16 @@
 
 .breaker {
   width: 90%;
-  height: 0px;
+  height: 0;
   border: 1px solid #c5c5c5;
+  z-index: -1;
 }
 
 .show__components {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 325px;
+  margin-top: 17.25rem;
 }
 
 .stack1 {
@@ -87,132 +88,135 @@
 }
 
 .stack1 > .aid__component {
-  width: 399px;
-  height: 300px;
+  width: 17.938rem;
+  height: 18.75rem;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .aid__component > .heading {
-  margin-top: 40px;
+  margin-top: 2.5rem;
   font-family: Poppins;
   font-style: normal;
   font-weight: 600;
-  font-size: 28px;
-  line-height: 42px;
+  font-size: 1.5rem;
+  line-height: 2.625rem;
 }
 
 .aid__component > .description {
-  margin-top: 36px;
+  margin-top: 2.25rem;
   font-family: Poppins;
   font-style: normal;
   font-weight: 500;
-  font-size: 25px;
-  line-height: 37px;
+  font-size: 1.312rem;
+  line-height: 2.313rem;
   color: #586060;
   text-align: center;
-  width: 350px;
+  width: 18.875rem;
 }
 
 .stack1 > .component__divider {
   position: relative;
-  width: 206px;
-  margin-left: -95px;
-  margin-right: -95px;
-  margin-top: 100px;
-  height: 0px;
+  width: 12.875rem;
+  margin-left: -4rem;
+  margin-right: -4rem;
+  margin-top: 6.25rem;
+  height: 0;
   border: 1px solid #989898;
   transform: rotate(90deg);
+  z-index: -1;
 }
 .component__divider2 {
   position: relative;
-  min-width: 206px;
-  margin-left: -95px;
-  margin-right: -95px;
-  margin-top: -75px;
-  height: 0px;
+  min-width: 12.875rem;
+  margin-left: -4rem;
+  margin-right: -4rem;
+  margin-top: -4.688rem;
+  height: 0;
   border: 1px solid #989898;
   transform: rotate(90deg);
+  z-index: -1;
 }
 .stack2 > .component__divider3 {
   position: relative;
-  width: 206px;
-  height: 0px;
-  margin-left: -95px;
-  margin-right: -95px;
-  margin-top: 100px;
+  width: 12.875rem;
+  height: 0;
+  margin-left: -4rem;
+  margin-right: -4rem;
+  margin-top: 6.25rem;
   border: 1px solid #989898;
   transform: rotate(90deg);
+  z-index: -1;
 }
 
 .bite__component > .icons > .icon {
-  margin-right: 15px;
+  margin-right: 0.938rem;
 }
 .bite__component > .icons > .icon2 {
-  margin-top: 5px;
+  margin-top: 0.303rem;
 }
 
 .stack1 > .bite__component {
-  width: 399px;
-  height: 300px;
+  width: 17.938rem;
+  height: 18.75rem;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .bite__component > .heading {
-  margin-top: 43.52px;
+  margin-top: 2.16rem;
   font-family: Poppins;
   font-style: normal;
   font-weight: 600;
-  font-size: 28px;
-  line-height: 42px;
+  font-size: 1.5rem;
+  line-height: 2.625rem;
 }
 
 .bite__component > .description {
-  margin-top: 36px;
+  margin-top: 2.25rem;
   font-family: Poppins;
   font-style: normal;
   font-weight: 500;
-  font-size: 25px;
-  line-height: 37px;
+  font-size: 1.312rem;
+  line-height: 2.313rem;
   color: #586060;
   text-align: center;
-  width: 300px;
+  width: 17.75rem;
 }
 
 .stack2 > .roadmaps__component {
-  width: 399px;
-  height: 300px;
+  width: 17.938rem;
+  height: 18.75rem;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .roadmaps__component > .heading {
-  margin-top: 50px;
+  margin-top: 3.125rem;
   font-family: Poppins;
   font-style: normal;
   font-weight: 600;
-  font-size: 28px;
-  line-height: 42px;
+  font-size: 1.5rem;
+  line-height: 2.625rem;
 }
 
 .roadmaps__component > .description {
-  margin-top: 36px;
+  margin-top: 2.25rem;
   font-family: Poppins;
   font-style: normal;
   font-weight: 500;
-  font-size: 25px;
-  line-height: 37px;
+  font-size: 1.312rem;
+  line-height: 2.313rem;
   color: #586060;
   text-align: center;
-  width: 350px;
+  width: 18.875rem;
 }
 .stack2 > .progress__component {
-  width: 399px;
-  height: 300px;
+  width: 17.938rem;
+  height: 18.75rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -220,27 +224,27 @@
 
 .progress__component > .icon > .icon2 {
   position: relative;
-  left: -40px;
-  top: -4px;
+  left: -2.2rem;
+  top: -0.25rem;
 }
 
 .progress__component > .heading {
-  margin-top: 47.57px;
+  margin-top: 2.973rem;
   font-family: Poppins;
   font-style: normal;
   font-weight: 600;
-  font-size: 28px;
-  line-height: 42px;
+  font-size: 1.5rem;
+  line-height: 2.625rem;
 }
 
 .progress__component > .description {
-  margin-top: 36px;
+  margin-top: 2.25rem;
   font-family: Poppins;
   font-style: normal;
   font-weight: 500;
-  font-size: 25px;
-  line-height: 37px;
+  font-size: 1.312rem;
+  line-height: 2.313rem;
   color: #586060;
   text-align: center;
-  width: 300px;
+  width: 16.75rem;
 }
