--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -14,9 +14,14 @@
 .header{
   background: linear-gradient(0deg, #8750A9, #8750A9),
   linear-gradient(0deg, #C4C4C4, #C4C4C4);
+  background-color: #8750A9;
   position: fixed;
   width: 100%;
-  z-index: 100px;
+  z-index: 100;
+}
+
+.header-s{
+  box-shadow: 0 0 6px 6px rgba(0, 0, 0, 0.25);
 }
 
 .link{
