--- a/src/Styles/Footer.css
+++ b/src/Styles/Footer.css
@@ -1,4 +1,9 @@
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 1400px) {
+  .lower__footer {
+    margin-top: -2rem;
+  }
+}
+@media screen and (max-width: 650px) {
   .lower__footer {
     min-height: 12.813rem;
     display: flex;
@@ -39,7 +44,7 @@
   height: 6.938rem;
   left: 0;
   bottom: 0;
-  top: 18.5rem;
+  top: 15.5rem;
   background: #262929;
   display: flex;
   align-items: center;
