--- a/src/Styles/LowerBody.css
+++ b/src/Styles/LowerBody.css
@@ -7,6 +7,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: 13rem !important;
   }
 
   .stack2 {
@@ -18,13 +19,14 @@
   }
 }
 
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 650px) {
   body {
     overflow-x: hidden;
   }
   .show__components {
     display: flex;
     flex-direction: column;
+    margin-top: 2.4rem !important;
   }
   .stack1 > .component__divider {
     display: none;
@@ -44,20 +46,90 @@
     justify-content: center;
     align-items: center;
   }
+  .aid__component {
+    margin-bottom: -1.5rem !important;
+  }
+  .aid__component > .icon {
+    height: 50px;
+  }
+  .aid__component > .heading {
+    font-size: 1.2rem !important;
+    margin-top: 0.8rem !important;
+  }
+  .aid__component > .description {
+    font-size: 1.1rem !important;
+    width: 15.5rem !important;
+    margin-top: 0.2rem !important;
+  }
   .bite__component {
-    margin-top: 6.25rem;
-    margin-bottom: -2.5rem;
+    margin-top: -3.8rem;
+    margin-bottom: -6rem;
     min-width: 100vw;
-    min-height: 35rem;
+    min-height: 18rem;
     background: #f5f5f5;
     justify-content: center;
   }
+  .bite__component > .icons > .icon {
+    height: 50px;
+    margin-right: 0rem !important;
+  }
+  .bite__component > .icons > .icon2 {
+    margin-left: -0.3rem !important;
+    height: 45px;
+  }
+  .bite__component > .heading {
+    font-size: 1.2rem !important;
+    margin-top: 0.8rem !important;
+  }
+  .bite__component > .description {
+    font-size: 1.1rem !important;
+    width: 14.5rem !important;
+    margin-top: 0.2rem !important;
+  }
+  .roadmaps__component {
+    margin-bottom: -12.5rem !important;
+  }
+  .roadmaps__component > .icons {
+    height: 50px;
+    margin-top: -1rem;
+  }
+  .roadmaps__component > .heading {
+    font-size: 1.2rem !important;
+    margin-top: 0.8rem !important;
+  }
+  .roadmaps__component > .description {
+    font-size: 1.1rem !important;
+    width: 15.5rem !important;
+    margin-top: 0.2rem !important;
+  }
   .progress__component {
     min-width: 100vw;
-    min-height: 35rem;
     background: #f5f5f5;
     justify-content: center;
     margin-top: 6.25rem;
+  }
+  .progress__component > .icon > .icons {
+    height: 50px !important;
+    margin-top: -1rem;
+  }
+  .progress__component > .icon > .icon2 {
+    height: 50px !important;
+    margin-top: -1rem;
+  }
+  .progress__component > .icon {
+    margin-top: -1.6rem;
+  }
+  .progress__component > .heading {
+    font-size: 1.2rem !important;
+    margin-top: 0.8rem !important;
+  }
+  .progress__component > .description {
+    font-size: 1.1rem !important;
+    width: 15.5rem !important;
+    margin-top: 0.2rem !important;
+  }
+  .breaker {
+    display: none;
   }
 }
 .footer__body {
@@ -77,7 +149,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 17.25rem;
+  margin-top: 15.25rem;
 }
 
 .stack1 {
@@ -195,7 +267,7 @@
 }
 
 .roadmaps__component > .heading {
-  margin-top: 3.125rem;
+  margin-top: 2.525rem;
   font-family: Poppins;
   font-style: normal;
   font-weight: 600;
@@ -229,7 +301,7 @@
 }
 
 .progress__component > .heading {
-  margin-top: 2.973rem;
+  margin-top: 2.473rem;
   font-family: Poppins;
   font-style: normal;
   font-weight: 600;
