--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -64,9 +64,7 @@
     cursor: pointer;
 }
 
-.bar-1,
-.bar-2,
-.bar-3 {
+.bar-1, .bar-2, .bar-3 {
     width: 25px;
     height: 2px;
     background-color: #ffffff;
