--- a/src/Styles/Learn.css
+++ b/src/Styles/Learn.css
@@ -1,10 +1,44 @@
 .learn-txt {
-    background: rgba(152, 152, 152, 1);
     font-family: Poppins;
     font-style: normal;
     font-weight: 600;
-    font-size: 20px;
+    font-size: 15px;
     line-height: 30px;
     display: flex;
     align-items: center;
+    color: rgba(152, 152, 152, 1);
+}
+
+.top-pad {
+    padding-top: 5.5%;
+}
+
+.SearchField {
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 15px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: rgba(152, 152, 152, 1);
+    border-radius: 31px;
+    border: 1px solid #989898;
+}
+
+.Search{
+    color: rgba(152, 152, 152, 1);
+    border-radius: 31px;
+    border: none;
+    border-right: none;
+    border-bottom-right-radius: 31px;
+    text-align: center !important;
+    align-items: center !important;
+}
+
+.Search:active{
+    text-decoration: none;
+    border: none;
+    border: 0px;
+    border-width: 0px;
 }
