--- a/src/Styles/Skill.css
+++ b/src/Styles/Skill.css
@@ -1,5 +1,5 @@
 .skillContainer {
-    padding-top: 30vh;
+    padding-top: .5vh;
     padding-left: 30vh;
     padding-right: 30vh;
     width: 100%;
@@ -12,11 +12,18 @@
 }
 
 .headingRow {
-     display: flex;
-     /* justify-content: center; */
-     /* align-items: center; */
+    padding-top: 18%;
+    padding-left: 20vh;
+    padding-right: 20vh;
+    display: flex;
+     justify-content: content-arround;
+     align-items: center;
      /* text-align: center; */
-     align-content: space-between;
+     /* align-content; */
+}
+
+.backarrow {
+    align-items: flex-end;
 }
 
 .addbutton {
