--- a/src/Styles/skillCard.css
+++ b/src/Styles/skillCard.css
@@ -8,10 +8,10 @@
     background-color: #FFFFFF;
     display: flex;
      /* justify-content: center; */
-     /* align-items: center; */
+     align-items: center;
      /* text-align: center; */
      align-content: space-between;
-    padding: .2em 0 .2em;
+    padding: .1em 0 .1em;
     border-radius: .4rem;
     /* height: 4vh; */
 }
