--- a/src/Styles/Skill.css
+++ b/src/Styles/Skill.css
@@ -1,42 +1,9 @@
 .skillContainer {
-    padding-top: .5vh;
-    padding-left: 30vh;
-    padding-right: 30vh;
     width: 100%;
-    /* display: flex; */
-    /* justify-content: center; */
-    align-items: center;
-    /* text-align: center; */
-    /* background-color: blue; */
     color: #586060;
 }
 
-.headingRow {
-    padding-top: 18%;
-    padding-left: 20vh;
-    padding-right: 20vh;
-    display: flex;
-     justify-content: content-arround;
-     align-items: center;
-     /* text-align: center; */
-     /* align-content; */
-}
 
-.backarrow {
-    align-items: flex-end;
-}
-
-.addbutton {
-    background: #FFFFFF;
-border: 1px solid #8750A9;
-box-sizing: border-box;
-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25) ;
-border-radius: 2rem;
-text-align: center;
-color: #8750A9;
-font-weight: 600;
-  padding: .3em 1.5rem .3rem;  
-}
 
 h5.tags {
     font-weight: 600;
@@ -55,4 +22,69 @@ font-weight: 600;
 font-size: 1.5rem;
 line-height: 2em;
 color: #586060;
+}
+
+
+
+
+@media screen and (max-width: 4400px) {
+
+    .headingRow {
+        padding-top: 15%;
+        padding-left: 20vh;
+        padding-right: 20vh;
+         display: flex;
+       
+    }
+
+    .backarrow {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: flex-end;
+        padding-top: 1vh;
+        padding-right: 2vw;
+    }
+
+    .addbutton {
+        background: #FFFFFF;
+    border: 1px solid #8750A9;
+    box-sizing: border-box;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25) ;
+    border-radius: 2rem;
+    text-align: center;
+    color: #8750A9;
+    font-weight: 600;
+      padding: .3em 1.5rem .3rem;  
+    }
+
+}
+
+@media screen and (max-width: 750px) {
+
+    .headingRow {
+        padding-top: 25%;
+        display: flex;
+        padding-left: 5vh;
+        padding-right: 5vh;
+        padding-bottom: 10vh;
+        flex-direction: column;
+    }
+    .backarrow {
+        display: block;
+        padding-top: 1vh;
+        padding-bottom: 2vh;
+        padding-right: 2vw;
+    }
+
+    .addbutton {
+    background: #FFFFFF;
+    border: 3px solid #8750A9;
+    box-sizing: border-box;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25) ;
+    border-radius: 100%;
+    color: #8750A9;
+    padding: .41em;
+    }
+    
 }
