--- a/src/Styles/Learn.css
+++ b/src/Styles/Learn.css
@@ -10,7 +10,7 @@
 }
 
 .top-pad {
-    padding-top: 5.5%;
+    padding-top: 80px;
 }
 
 .SearchField {
@@ -54,7 +54,7 @@
     font-family: Poppins;
     font-style: normal;
     font-weight: 600;
-    font-size: 27px;
+    font-size: 25px;
     line-height: 54px;
     display: flex;
     align-items: center;
@@ -98,7 +98,6 @@
     font-style: normal;
     font-weight: normal;
     font-size: 15px;
-    line-height: 25px;
     color: #989898;
 }
 
@@ -122,7 +121,7 @@
     color: #8750A9 !important;
 }
 
-.skillRed{
+.skillRed {
     width: 60px;
     background: #D74646;
     border-radius: 9px;
@@ -187,4 +186,45 @@
     font-size: 12px;
     line-height: 24px;
     color: #FFFFFF;
+}
+
+.addition {
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    /* display: flex; */
+    /* align-items: center; */
+    color: #989898;
+}
+
+.mobile-card {
+    font-size: 14px !important;
+}
+
+.icon-time {
+    color: #36CF45;
+    font-size: 20px;
+    padding-top: 10px;
+    padding-right: 25px;
+}
+
+@media only screen and (max-width: 768px) {
+    .mobile-content {
+        font-size:11px !important;
+    }
+    
+    .mobile-subskill{
+        font-size: 11px !important;
+        padding-left: 20px;
+    }
+
+    .mobile-font{
+        font-size: 10px;
+    }
+
+    .mobile-add{
+        font-size: 11px !important;
+        padding-top: 6px;
+    }
 }
