--- a/src/Styles/Skill.css
+++ b/src/Styles/Skill.css
@@ -75,6 +75,7 @@ color: #586060;
         padding-top: 1vh;
         padding-bottom: 2vh;
         padding-right: 2vw;
+        color: #586060;
     }
 
     .addbutton {
@@ -84,7 +85,7 @@ color: #586060;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25) ;
     border-radius: 100%;
     color: #8750A9;
-    padding: .41em;
+    padding: .31em;
     }
     
 }
