--- a/src/Styles/Form.css
+++ b/src/Styles/Form.css
@@ -1,12 +1,17 @@
 .headingRow {
     color: #586060;
     font-weight: 600;
+   
 }
 
 .spacebetween {
     justify-content: space-between;
 }
 
+.formgroup {
+    padding-top: 1em;
+    
+}
 
 
 
