--- a/src/Components/Form/Skill.css
+++ b/src/Components/Form/Skill.css
@@ -2,7 +2,7 @@
     background: #E1E1E1;
     border-radius: .71em;
     margin-top: 5%;
-    
+    padding-bottom: .3em;
 }
 .title {
     background-color: #F5F5F5;
@@ -13,12 +13,24 @@
     border-radius: .5em;
     padding: 2% 1% 2%;
     margin-top: 3%;
+    margin-bottom: 3%;
 }
 
 .container {
-    padding: 5% 4% 5%;
+    padding: 5% 4% 2%;
+    margin-bottom: 0%;
+    margin-top: 0%;
 }
 
 .row {
     margin: 0 !important;
+}
+
+.inputresource {
+    border: none !important;;
+}
+
+.hrline {
+    width: 90%;
+    margin: auto;
 }
