--- a/src/Components/Form/SkillRoadmap.css
+++ b/src/Components/Form/SkillRoadmap.css
@@ -9,6 +9,6 @@
 .skill {
     background-color: #F5F5F5;
     border-radius: .5em;
-    padding: .3% 0% .4% 3%;
+    padding: 2% 0% .4% 3%;
     color: #464646;
 }
