--- a/src/Components/Form/Skill.css
+++ b/src/Components/Form/Skill.css
@@ -22,7 +22,7 @@
 }
 
 .container {
-    padding: 5% 4% 2%;
+    padding: 5% 4% 0% 4%;
     margin-bottom: 0%;
     margin-top: 0%;
 }
@@ -37,6 +37,9 @@
 }
 
 .hrline {
-    width: 90%;
+    width: 100%;
     margin: auto;
+    margin-top: 6%;
+    /* opacity: .6; */
+    border: 1px solid #989898;
 }
