--- a/src/Components/Form/SkillRoadmap.css
+++ b/src/Components/Form/SkillRoadmap.css
@@ -4,10 +4,11 @@
 
 .R-1 {
     padding-top: 2%;
+    padding-bottom: 2%;
+    background-color: #F5F5F5;
 }
 
 .skill {
-    background-color: #F5F5F5;
     border-radius: .5em;
     padding: 2% 0% .4% 3%;
     color: #464646;
