--- a/src/Styles/Form.css
+++ b/src/Styles/Form.css
@@ -73,8 +73,8 @@ span.tags {
     .headingRow {
         padding-top: 20%;
         display: flex;
-        padding-left: 5vh;
-        padding-right: 5vh;
+        padding-left: 10%;
+        padding-right: 10%;
         padding-bottom: 10vh;
         flex-direction: column;
     }
@@ -82,7 +82,8 @@ span.tags {
         display: block;
         padding-top: 1vh;
         padding-bottom: 2vh;
-        padding-right: 2vw;
+        padding-right: 2%;
+        padding-left: 2%;
     }
 
     .formgroup {
