--- a/src/Styles/Skill.css
+++ b/src/Styles/Skill.css
@@ -28,21 +28,26 @@ color: #586060;
 .tags {
     border-radius: .7em;
     border: 1px solid #7A7A7A;
-    margin-right: 2em;
-    padding: .1em .9em .2em;
+    margin-right: 2em ;
+    margin-left: 1em ;
+    /* margin: 0; */
+    padding: .1em .9em .3em;
     font-weight: 500;
     color: #424242;
     font-size: small;
+    margin-bottom: 1em;
 }
 
 .colorTags {
     border-radius: .7em;
     margin-right: 2em;
+    margin-left: 1em ;
     padding: .1em .9em .2em;
     color: #FFFFFF;
     font-weight: 500;
     font-size: small;
     background-color: #2C91B0;
+    margin-bottom: 1em;
 }
 
 
@@ -50,8 +55,8 @@ color: #586060;
 
     .headingRow {
         padding-top: 10%;
-        padding-left: 15vh;
-        padding-right: 30vh;
+        padding-left: 10%;
+        padding-right: 20%;
          display: flex;
        
     }
@@ -62,7 +67,7 @@ color: #586060;
         align-items: flex-start;
         justify-content: flex-end;
         padding-top: 1vh;
-        padding-right: 2vw;
+        padding-right: 2%;
     }
 
     .addbutton {
