--- a/src/Styles/skillCard.css
+++ b/src/Styles/skillCard.css
@@ -2,6 +2,7 @@
     background-color:#F5F5F5;
     border-radius: 18px;
     padding: 3vh 6vh 3vh;
+    margin: 2% 0% 4%;
    
 }
 
@@ -13,6 +14,7 @@
     padding: .1em 0 .1em;
     border-radius: .4rem;
     overflow: hidden;
+    justify-content: space-between;
 }
 
 .description {
