--- a/src/Styles/About.css
+++ b/src/Styles/About.css
@@ -1,13 +1,62 @@
+@media screen and (max-width: 992px) {
+  .image > svg {
+    width: 18rem !important;
+    margin-top: 0 !important;
+  }
+  .what__we__do > .container > hr {
+    left: -8rem !important;
+  }
+  .what__we__do {
+    margin-top: 1rem !important;
+  }
+  .we__do {
+    max-width: 18rem !important;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .team {
+    margin-bottom: 17rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .image > svg {
+    display: none !important;
+  }
+  .what__we__do > .container {
+    display: flex;
+    flex-direction: column;
+  }
+  .what__we__do > .container > hr {
+    display: none;
+  }
+
+  .what__we__do > .container > .contact__form {
+    margin-top: 4rem;
+    margin-left: 0;
+  }
+  .what__we__do {
+    margin-bottom: 0;
+  }
+  .we__do {
+    max-width: 100vw !important;
+  }
+  .contact__form {
+    max-width: 92vw;
+  }
+}
 .full_container {
   padding-top: 3.7rem;
   margin-bottom: -15.5rem;
 }
-.upper__part {
-  width: 100%;
-  height: 30.438rem;
-  left: 0;
 
+.upper__part {
+  width: 100vw;
+  max-height: 30.438rem;
+  left: 0;
   background: rgba(199, 199, 199, 0.15);
+  padding-bottom: 3rem;
 }
 
 .about__us {
@@ -57,16 +106,18 @@
   margin-top: -3rem;
   margin-left: 3rem;
   width: 32rem;
+  display: flex;
+  align-items: center;
 }
 
 .what__we__do {
-  width: 100%;
-  height: 34.48rem;
+  width: 100vw;
+  min-height: 34.48rem;
   margin-top: -2.5rem;
 }
 
 .we__do {
-  width: 30.438rem;
+  max-width: 30.438rem;
 }
 
 .we__do > h1 {
