--- a/src/Styles/LayoutSkill.css
+++ b/src/Styles/LayoutSkill.css
@@ -1,4 +1,9 @@
-.SideBar{
+.SideBar {
     border: solid #E3E3E3;
     border-bottom: 2px;
+    margin-top: 0px !important;
+}
+
+.Spacing {
+    margin-top: 100px;
 }
