--- a/src/Styles/LayoutSkill.css
+++ b/src/Styles/LayoutSkill.css
@@ -1,7 +1,12 @@
 .SideBar {
-    border: solid #E3E3E3;
-    border-bottom: 2px;
-    margin-top: 0px !important;
+    border: 2px solid #E3E3E3;
+    border-width: 0 2px 0px 0px;
+    height: 100%;
+    position:fixed;
+    /* left: 100px; */
+    /* width: 245px; */
+    padding-top: 300px;
+
 }
 
 .Spacing {
