--- a/src/Styles/Search.css
+++ b/src/Styles/Search.css
@@ -1,13 +1,40 @@
-.Search{
-    border: none;
-    border-radius: 32px;
+.top-pad {
+    padding-top: 80px;
 }
 
-.Search:focus{
+.SearchField {
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 15px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: rgba(152, 152, 152, 1);
+    border-radius: 31px;
+    border: 1px solid #989898;
+}
+
+.Search {
+    color: rgba(152, 152, 152, 1);
+    border-radius: 31px !important;
+    border: none !important;
+    border-right: none;
+    border-bottom-right-radius: 31px !important;
+    text-align: center !important;
+    align-items: center !important;
+}
+
+.Search:active {
+    text-decoration: none;
+    border: none;
+    border: 0px;
+    border-width: 0px;
     outline: none !important;
-    border: none;
 }
 
-.Search:active{
-    outline: none;
+.Search:focus {
+    outline: none !important;
+    border: none !important;
+    box-shadow: none !important;
 }
