--- a/src/Styles/skillCard.css
+++ b/src/Styles/skillCard.css
@@ -2,7 +2,7 @@
     background-color:#F5F5F5;
     border-radius: 18px;
     padding: 3vh 6vh 3vh;
-    margin: 2% 0% 4%;
+    margin: 4% 0% 8%;
    
 }
 
@@ -25,4 +25,13 @@
 .copyButtonCol {
     padding: 0;
     text-align-last: end;
-}
+ }
+/* 
+ .editRow {
+    position: absolute;
+        left: 0;
+        right: 0;
+     height: 100px;
+     top: 30px; 
+    
+ */
