--- a/src/Styles/Skill.css
+++ b/src/Styles/Skill.css
@@ -1,115 +1,128 @@
+.suggest__edit {
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 27px;
+
+  display: flex;
+  align-items: center;
+  text-align: center;
+
+  color: #8750a9;
+  cursor: pointer;
+}
+
 .skillContainer {
-    width: 100%;
-    color: #586060;
+  width: 100%;
+  color: #586060;
+}
+
+.headingRow {
+  min-height: 76vh;
 }
 
 .tagContainer {
-    padding: 2% 0 2%;
+  padding: 2% 0 2%;
 }
 
 .tagContainer > h5 {
-    font-weight: 600;
-    font-size: 1.1em;
-    line-height: 1.5em;
-    display: flex;
-    align-items: center;
-    color: #989898 ;
+  font-weight: 600;
+  font-size: 1.1em;
+  line-height: 1.5em;
+  display: flex;
+  align-items: center;
+  color: #989898;
 }
 h3.skillName {
-    display: flex;
-align-items: center;
-font-weight: 600;
-font-size: 1.5rem;
-line-height: 2em;
-color: #586060;
+  display: flex;
+  align-items: center;
+  font-weight: 600;
+  font-size: 1.5rem;
+  line-height: 2em;
+  color: #586060;
 }
 
-
 .skilltags {
-    border-radius: .7em;
-    border: 1px solid #7A7A7A;
-    margin-right: 2em ;
-    margin-left: 1em ;
-    /* margin: 0; */
-    /* padding: .1em .9em .3em; */
-    font-weight: 500;
-    color: #424242;
-    font-size: small;
-    margin-bottom: 1em;
+  border-radius: 0.7em;
+  border: 1px solid #7a7a7a;
+  margin-right: 2em;
+  margin-left: 1em;
+  /* margin: 0; */
+  /* padding: .1em .9em .3em; */
+  font-weight: 500;
+  color: #424242;
+  font-size: small;
+  margin-bottom: 1em;
 }
 
 .colorTags {
-    border-radius: .7em;
-    margin-right: 2em;
-    margin-left: 1em ;
-    padding: .1em .9em .2em;
-    color: #FFFFFF;
-    font-weight: 500;
-    font-size: small;
-    background-color: #2C91B0;
-    margin-bottom: 1em;
+  border-radius: 0.7em;
+  margin-right: 2em;
+  margin-left: 1em;
+  padding: 0.1em 0.9em 0.2em;
+  color: #ffffff;
+  font-weight: 500;
+  font-size: small;
+  background-color: #2c91b0;
+  margin-bottom: 1em;
 }
 
-
 @media screen and (max-width: 4400px) {
+  .headingRow {
+    padding-top: 10%;
+    padding-left: 10%;
+    padding-right: 20%;
+    display: flex;
+  }
 
-    .headingRow {
-        padding-top: 10%;
-        padding-left: 10%;
-        padding-right: 20%;
-         display: flex;
-       
-    }
+  .backarrow {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: flex-end;
+    padding-top: 1vh;
+    padding-right: 2%;
+  }
 
-    .backarrow {
-        display: flex;
-        flex-direction: row;
-        align-items: flex-start;
-        justify-content: flex-end;
-        padding-top: 1vh;
-        padding-right: 2%;
-    }
-
-    .addbutton {
-        background: #FFFFFF;
-    border: 1px solid #8750A9;
+  .addbutton {
+    background: #ffffff;
+    border: 1px solid #8750a9;
     box-sizing: border-box;
-    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25) ;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
     border-radius: 2rem;
     text-align: center;
-    color: #8750A9;
+    color: #8750a9;
     font-weight: 600;
-      padding: .3em 1.5rem .3rem;  
-    }
-
+    padding: 0.3em 1.5rem 0.3rem;
+  }
 }
 
 @media screen and (max-width: 750px) {
+  .headingRow {
+    padding-top: 20%;
+    display: flex;
+    padding-left: 5vh;
+    padding-right: 5vh;
+    padding-bottom: 10vh;
+    flex-direction: column;
+    min-height: 83vh;
+  }
+  .backarrow {
+    display: block;
+    padding-top: 1vh;
+    padding-bottom: 2vh;
+    padding-right: 2vw;
+    color: #586060;
+  }
 
-    .headingRow {
-        padding-top: 20%;
-        display: flex;
-        padding-left: 5vh;
-        padding-right: 5vh;
-        padding-bottom: 10vh;
-        flex-direction: column;
-    }
-    .backarrow {
-        display: block;
-        padding-top: 1vh;
-        padding-bottom: 2vh;
-        padding-right: 2vw;
-        color: #586060;
-    }
-
-    .addbutton {
-    background: #FFFFFF;
-    border: 3px solid #8750A9;
+  .addbutton {
+    background: #ffffff;
+    border: 3px solid #8750a9;
     box-sizing: border-box;
-    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25) ;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
     border-radius: 100%;
-    color: #8750A9;
-    padding: .31em;
-    }
-    
+    color: #8750a9;
+    padding: 0.31em;
+  }
 }
