--- a/src/Styles/EditForms/TagsEdit.css
+++ b/src/Styles/EditForms/TagsEdit.css
@@ -40,12 +40,12 @@
   align-items: center;
 }
 
-.tags__field > input {
+.tags__field>input {
   margin-left: 1rem;
   margin-top: 0;
 }
 
-.tags__field > .MuiSvgIcon-root {
+.tags__field>.MuiSvgIcon-root {
   margin-right: 0.5rem;
   cursor: pointer;
   color: #989898;
@@ -54,6 +54,9 @@
 .tags__area {
   min-height: 5rem;
   background: #f5f5f5;
+}
+
+.tagsDisplay {
   border-radius: 18px;
   display: flex;
   flex-wrap: wrap;
@@ -83,9 +86,7 @@
   line-height: 22px;
   display: flex;
   align-items: center;
-
   color: #989898;
-
   padding: 0.3rem 0.8rem 0.3rem 0.8rem;
 }
 
@@ -94,5 +95,18 @@
   border: 1px solid #989898;
   box-sizing: border-box;
   border-radius: 0px 9px 9px 0px;
+  cursor: pointer;
+}
+
+.bottomTxt {
+  color: #586060;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 13px;
+  padding-bottom: 10px;
+}
+
+.bottomTxt:hover{
   cursor: pointer;
 }
