--- a/src/Styles/EditForms/SuperSkillEdit.css
+++ b/src/Styles/EditForms/SuperSkillEdit.css
@@ -55,12 +55,15 @@
   display: flex;
   background: #ffffff;
   border-radius: 11px;
-  margin-bottom: 1rem;
+  margin-bottom: 0.7rem;
+  border: 1px solid black;
+  margin-top: 0.1em;
+  
 }
 
 .skills__button > .skills__name {
   width: 100%;
-  padding: 0.3rem 0 0.3rem 1rem;
+  padding: 0.3rem 0 0rem 1rem;
 }
 
 .skills__button > .skillsdelete__btn {
@@ -68,6 +71,10 @@
   display: flex;
   align-items: center;
   cursor: pointer;
+}
+
+.skill_button > .EditBtn {
+  padding: 0 !important;
 }
 
 .remove__roadmap {
@@ -81,3 +88,4 @@
 .remove__roadmap > input {
   color: #989898;
 }
+
