--- a/src/Styles/EditForms/TagsEdit.css
+++ b/src/Styles/EditForms/TagsEdit.css
@@ -54,13 +54,14 @@
 .tags__area {
   min-height: 5rem;
   background: #f5f5f5;
+  border-radius: 18px;
+  padding: 0 2% 0 2%;
+  
 }
 
 .tagsDisplay {
-  border-radius: 18px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
   align-items: center;
   padding: 1rem 1rem 0 1rem;
 }
@@ -82,12 +83,12 @@
   font-family: Poppins;
   font-style: normal;
   font-weight: 500;
-  font-size: 15px;
+  font-size: .81rem;
   line-height: 22px;
   display: flex;
   align-items: center;
   color: #989898;
-  padding: 0.3rem 0.8rem 0.3rem 0.8rem;
+  padding: 0.01rem 0.6rem 0.01rem 0.6rem;
 }
 
 .delete__btn {
