--- a/src/Styles/EditForms/SuperSkillEdit.css
+++ b/src/Styles/EditForms/SuperSkillEdit.css
@@ -8,7 +8,7 @@
 .remove__skill > p {
   font-family: Poppins;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 14px;
   line-height: 22px;
   display: flex;
@@ -58,12 +58,13 @@
   margin-bottom: 0.7rem;
   border: 1px solid black;
   margin-top: 0.1em;
-  
+  padding: .2rem;
 }
 
 .skills__button > .skills__name {
   width: 100%;
   padding: 0.3rem 0 0rem 1rem;
+  font-weight: 500;
 }
 
 .skills__button > .skillsdelete__btn {
