--- a/src/Styles/EditForms/RoadMapSkill.module.css
+++ b/src/Styles/EditForms/RoadMapSkill.module.css
@@ -11,6 +11,7 @@
   background: #F5F5F5;
   border-radius: 18px;
   padding: 20px;
+  z-index: 9;
 }
 
 .headLine {
@@ -60,6 +61,29 @@
   transform: translateY(-8px);
 }
 
-.Delete:hover{
+.Delete:hover {
   cursor: pointer;
 }
+
+.hrCSS {
+  /* color: #989898; */
+  border: 1.5px solid #989898;
+}
+
+.hrCSS:hover {
+  /* color: #000000; */
+  border: 1.5px solid #000000;
+}
+
+.AddCSS {
+  transform: translateY(-100%) translateX(2400%) ;
+}
+
+.Arrow{
+  display: inline-flex;
+}
+
+.ArrowBtn{
+  padding-right: 10px;
+}
+
