--- a/src/Components/Form/SkillRoadmap.css
+++ b/src/Components/Form/SkillRoadmap.css
@@ -1,15 +1,15 @@
 .SkillRoadmap {
-    padding-top: 5%;
+  padding-top: 5%;
 }
 
 .R-1 {
-    padding-top: 2%;
-    padding-bottom: 2%;
-    background-color: #F5F5F5;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  background-color: #e1e1e1;
 }
 
 .skills {
-    border-radius: .5em;
-    padding: 2% 0% .4% 3%;
-    color: #464646;
+  border-radius: 0.5em;
+  padding: 2% 0% 0.4% 3%;
+  color: #464646;
 }
