Search Bar back-end linking

--- a/src/Styles/Learn.css
+++ b/src/Styles/Learn.css
@@ -126,7 +126,7 @@
     font-style: normal;
     font-weight: 500;
     font-size: 12px;
-    width: 45px;
+    /* width: 45px; */
     color: #FFFFFF;
 }
 
@@ -139,7 +139,7 @@
     font-weight: 500;
     font-size: 12px;
     padding-right: 5px;
-    width: 40px;
+    /* width: 40px; */
     color: #FFFFFF;
 }
 
