--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -1,119 +1,153 @@
 .header-text {
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 15px;
-    line-height: 27px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    color: #8750A9;
-    color: #ffffff;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 27px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #8750a9;
+  color: #ffffff;
+}
+
+.row {
+  display: flex;
+  flex-wrap: nowrap;
 }
 
 .header {
-    background: linear-gradient(0deg, #8750A9, #8750A9), linear-gradient(0deg, #C4C4C4, #C4C4C4);
-    background-color: #8750A9;
-    position: fixed;
-    width: 100%;
-    z-index: 100;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    transition: ease 1s;
+  background: linear-gradient(0deg, #8750a9, #8750a9),
+    linear-gradient(0deg, #c4c4c4, #c4c4c4);
+  background-color: #8750a9;
+  position: fixed;
+  width: 100%;
+  z-index: 100;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  transition: ease 1s;
 }
 
 .header-s {
-    box-shadow: 0 0 6px 6px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 6px 6px rgba(0, 0, 0, 0.25);
 }
 
 .link {
-    text-decoration: none;
-    color: #ffffff;
-    justify-content: center;
+  text-decoration: none;
+  color: #ffffff;
+  justify-content: center;
 }
 
 .link:hover {
-    text-decoration: none;
-    color: #ffffff;
+  text-decoration: none;
+  color: #ffffff;
 }
 
 .link:visited {
-    text-decoration: none;
-    color: #ffffff;
+  text-decoration: none;
+  color: #ffffff;
 }
 
 .signup {
-    background-color: #ffffff;
-    border-radius: 20.5px;
-    height: 30px;
+  background-color: #ffffff;
+  border-radius: 20.5px;
+  height: 30px;
 }
 
 .link-s {
-    color: #8750A9;
-    text-decoration: none;
+  color: #8750a9;
+  text-decoration: none;
 }
 
 .link-s:hover:visited {
-    color: #8750A9;
-    text-align: center;
-    text-decoration: #8750A9;
+  color: #8750a9;
+  text-align: center;
+  text-decoration: #8750a9;
 }
 
 .menu-btn {
-    display: inline-block;
-    cursor: pointer;
+  display: inline-block;
+  cursor: pointer;
 }
 
-.bar-1, .bar-2, .bar-3 {
-    width: 25px;
-    height: 2px;
-    background-color: #ffffff;
-    margin: 6px 0;
-    transition: 0.4s;
+.bar-1,
+.bar-2,
+.bar-3 {
+  width: 25px;
+  height: 2px;
+  background-color: #ffffff;
+  margin: 6px 0;
+  transition: 0.4s;
 }
 
 .change-1 {
-    margin-top: 60px;
-    width: 25px;
-    transform: rotate(45deg) translateY(10px);
-    height: 2px;
-    background-color: #ffffff;
-    margin: 6px 0;
-    transition: 0.4s;
+  margin-top: 60px;
+  width: 25px;
+  transform: rotate(45deg) translateY(10px);
+  height: 2px;
+  background-color: #ffffff;
+  margin: 6px 0;
+  transition: 0.4s;
 }
 
 .change-2 {
-    opacity: 0;
-    transition: 0.4s;
+  opacity: 0;
+  transition: 0.4s;
 }
 
 .change-3 {
-    width: 25px;
-    transform: rotate(-45deg) translateY(-6px) translateX(-5px);
-    height: 2px;
-    background-color: #ffffff;
-    margin: 6px 0;
-    transition: 0.4s;
+  width: 25px;
+  transform: rotate(-45deg) translateY(-6px) translateX(-5px);
+  height: 2px;
+  background-color: #ffffff;
+  margin: 6px 0;
+  transition: 0.4s;
 }
 
 .header-ex {
-    z-index: 200;
-    transition: 1s ease;
-    background-color: #8750A9;
+  z-index: 200;
+  transition: 1s ease;
+  background-color: #8750a9;
 }
 
 .bar {
-    width: 80px;
-    height: 2px;
-    z-index: 300;
-    color: #ffffff !important;
-    border-width: 2px;
+  width: 80px;
+  height: 2px;
+  z-index: 300;
+  color: #ffffff !important;
+  border-width: 2px;
 }
 
 .header-bar {
-    margin-left: 10%;
-    width: 80%;
-    border-width: 10px;
-    margin-right: 10%;
-    color: #ffffff;
+  margin-left: 10%;
+  width: 80%;
+  border-width: 10px;
+  margin-right: 10%;
+  color: #ffffff;
+}
+
+img {
+  width: 107px;
+  height: 39.68px;
+}
+
+.line {
+  margin-left: 40px;
+}
+
+.breaker {
+  width: 50px !important;
+  height: 1px;
+  margin-top: 1%;
+
+  border: 1px solid #cdcdcd;
+  transform: matrix(0, 1, 1, 0, 0, 0);
+}
+
+.line {
+  max-width: 150px;
+}
+
+.link__visited {
+  text-decoration: underline;
 }
