--- a/src/Styles/Body.css
+++ b/src/Styles/Body.css
@@ -93,7 +93,7 @@
   }
 }
 
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 751px) {
   .center {
     display: flex;
     justify-content: center;
@@ -101,8 +101,16 @@
     text-align: center;
   }
 
+  .gridRows {
+    height: 40%;
+    display: flex;
+    flex-direction: column;
+    height: auto !important;
+  }
+
   .seprator {
     border-left: none;
+    margin-top: 50px;
   }
   .headingPart1 {
     color: #8750a9;
@@ -113,12 +121,12 @@
     padding-left: 0;
     color: #8750a9;
   }
-  h1.headingPart1 {
+  h1 .headingPart1 {
     font-size: 5vh;
     font-weight: 600;
     line-height: 10vh;
   }
-  h1.headingPart2 {
+  h1 .headingPart2 {
     font-weight: 600;
     font-size: 8vh;
     line-height: 10vh;
