--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -143,6 +143,11 @@ img {
   font-size: 25px;
   margin-left: 5px;
 }
+.header-text > span {
+  color: white;
+  font-size: 25px;
+  margin-left: 5px;
+}
 .line {
   margin-left: 30px;
   margin-right: 20px;
