--- a/src/Styles/skillCard.css
+++ b/src/Styles/skillCard.css
@@ -1,31 +1,39 @@
 .skillCardres {
-    background-color:#F5F5F5;
-    border-radius: 18px;
-    padding: 3vh 6vh 3vh;
-    margin: 4% 0% 8%;
-   
+  background-color: #f5f5f5;
+  border-radius: 18px;
+  padding: 3vh 6vh 3vh;
+  margin: 4% 0% 8%;
 }
 
 .links {
-    background-color: #FFFFFF;
-    display: flex;
-    align-items: center;
-    align-content: space-between;
-    padding: .1em 0 .1em;
-    border-radius: .4rem;
-    overflow: hidden;
-    justify-content: space-between;
+  background-color: #ffffff;
+  display: flex;
+  align-items: center;
+  align-content: space-between;
+  padding: 0.1em 0 0.1em;
+  border-radius: 0.4rem;
+  overflow: hidden;
+  justify-content: space-between;
 }
 
 .description {
-    padding-top: 1.5em ;
+  padding-top: 1.5em;
 }
 
-
 .copyButtonCol {
-    padding: 0;
-    text-align-last: end;
- }
+  padding: 0;
+  text-align-last: end;
+}
+
+button.btn.btn-primary.copyButton:focus {
+  outline: none !important;
+  border: none !important;
+}
+
+button.btn.btn-primary.copyButton:active {
+  outline: 0 !important;
+  border: 0 !important;
+}
 /* 
  .editRow {
     position: absolute;
